# expense-tracker

./: README.md  TODO.md  abbreviate.py  actions.py  cli.py  fromfile.py  pyproject.toml
data/: expenses.csv
expense_tracker/: cli.py
expense_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
expense_tracker/data/: expenses.csv
