[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "expense-tracker"
version = "1.0.0"
description = "An Expense Tracker"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Kristia Kanchev"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "prettytable>=3.0.0"
]

[project.scripts]
expense-tracker = "expense_tracker.cli:main"

[project.urls]
Homepage = "https://github.com/kristianfzr/expense-tracker"