[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]  
include = ["expense_tracker*"]
exclude = ["data*"]

[project]
name = "expense-tracker"
version = "1.0.0"
description = "An Expense Tracker"
readme = "README.md"
requires-python = ">=3.6"
license = "MIT"
authors = [
    {name = "Kristian Kanchev"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "prettytable>=3.0.0"
]

[project.scripts]
expense-tracker = "expense_tracker.cli:main"

[project.urls]
Homepage = "https://github.com/kristianfzr/expense-tracker"